--- a/in28minutes-limits-service.properties
+++ b/in28minutes-limits-service.properties
@@ -1,4 +1,4 @@
 server.port=8081
 spring.cloud.config.enabled=false
-limits-service.minimum=3
-limits-service.maximum=996
+in28minutes-limits-service.properties.minimum=3
+in28minutes-limits-service.properties.maximum=996
