--- a/in28minutes-limits-service.properties
+++ b/in28minutes-limits-service.properties
@@ -1,4 +1,4 @@
 server.port=8081
-spring.cloud.config.enabled=false
+#spring.cloud.config.enabled=false
 in28minutes-limits-service.minimum=3
 in28minutes-limits-service.maximum=996
